[gd_scene load_steps=22 format=4 uid="uid://e0m4wnojf64o"]

[ext_resource type="Texture2D" uid="uid://boeiigl4tafmq" path="res://assets/Room-1_2.png" id="1_ejswk"]
[ext_resource type="Texture2D" uid="uid://dp8vpydyps1mh" path="res://assets/Spritesheet.png" id="1_wwpf4"]
[ext_resource type="Script" uid="uid://dtth37rc2wtgu" path="res://scripts/player.gd" id="2_m7ahb"]
[ext_resource type="Texture2D" uid="uid://bsusbri7waa7f" path="res://assets/Detective-Sheet.png" id="3_conm7"]
[ext_resource type="Script" uid="uid://bc2q6rfb0e4df" path="res://scripts/level_ui.gd" id="3_dwgg1"]
[ext_resource type="Texture2D" uid="uid://d3xjpwswgkqpo" path="res://assets/Detective.png" id="3_ru4tf"]
[ext_resource type="Script" uid="uid://bwqhmikm7fmgk" path="res://scripts/enemy.gd" id="4_6sh32"]
[ext_resource type="PackedScene" uid="uid://cohuot7eqkgvi" path="res://scenes/ui/settings.tscn" id="4_dwgg1"]
[ext_resource type="Script" uid="uid://ente7ejhjym1" path="res://scripts/box.gd" id="5_bbk5w"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bbk5w"]
texture = ExtResource("1_ejswk")
0:0/0 = 0
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_conm7"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_bbk5w")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6sh32"]
texture = ExtResource("1_ejswk")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_ejswk"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_6sh32")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwgg1"]
size = Vector2(15, 5.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6sh32"]
size = Vector2(15, 30.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ejswk"]
size = Vector2(15, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bbk5w"]
size = Vector2(15, 22)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_bbk5w"]
vertices = PackedVector2Array(126.773, 70.2031, 127.867, 167.539, 47.5625, 159.141, 27.7969, 68.8281)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(136.667, 60.3333, 138, 178.667, 39.3333, 168.333, 15.3333, 58.6667)])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_conm7"]
size = Vector2(12.3333, 13.3333)

[sub_resource type="LabelSettings" id="LabelSettings_6sh32"]
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ejswk"]
draw_center = false

[node name="Level1" type="Node2D"]

[node name="Floor" type="TileMapLayer" parent="."]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAABAAQAAAABAAQAAAACAAQAAAACAAQAAAADAAQAAAADAAQAAAAEAAQAAAAEAAQAAAAFAAQAAAAFAAQAAAAGAAQAAAAGAAQAAAABAAUAAAABAAUAAAACAAUAAAACAAUAAAADAAUAAAADAAUAAAAEAAUAAAAEAAUAAAAFAAUAAAAFAAUAAAAGAAUAAAAGAAUAAAABAAYAAAABAAYAAAACAAYAAAACAAYAAAADAAYAAAADAAYAAAAEAAYAAAAEAAYAAAAFAAYAAAAFAAYAAAAGAAYAAAAGAAYAAAABAAcAAAABAAcAAAACAAcAAAACAAcAAAADAAcAAAADAAcAAAAEAAcAAAAEAAcAAAAFAAcAAAAFAAcAAAAGAAcAAAAGAAcAAAA=")
tile_set = SubResource("TileSet_conm7")

[node name="Wall" type="TileMapLayer" parent="." groups=["Wall"]]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAABAAAAAAACAAAAAAACAAAAAAADAAAAAAADAAIAAAAEAAAAAAADAAIAAAAFAAAAAAAFAAAAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAIAAAAAAAMAAAAAAAMAAAABAAMAAAABAAMAAAACAAMAAAACAAMAAAADAAMAAAADAAMAAAAFAAMAAAAFAAMAAAAEAAMAAAADAAIAAAAGAAIAAAAGAAIAAAAGAAMAAAAGAAMAAAAGAAEAAAAGAAEAAAAGAAAAAAAGAAAAAAABAAEAAAABAAEAAAACAAEAAAACAAEAAAABAAIAAAABAAIAAAACAAIAAAACAAIAAAADAAIAAAADAAIAAAADAAEAAAADAAIAAAAEAAEAAAADAAIAAAAEAAIAAAADAAIAAAAFAAIAAAAFAAIAAAAFAAEAAAAFAAEAAAAHAAAAAAAHAAAAAAAHAAEAAAAHAAEAAAAHAAIAAAAHAAIAAAAHAAMAAAAHAAMAAAAHAAQAAAAHAAQAAAAHAAUAAAAHAAUAAAAHAAYAAAAHAAYAAAAHAAcAAAAHAAcAAAAAAAQAAAAAAAQAAAAAAAUAAAAAAAUAAAAAAAYAAAAAAAYAAAAAAAcAAAAAAAcAAAA=")
tile_set = SubResource("TileSet_ejswk")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(86, 279)
scale = Vector2(3, 3)
script = ExtResource("2_m7ahb")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(1, -9)
texture = ExtResource("3_conm7")
region_enabled = true
region_rect = Rect2(3, 3, 9, 29)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -10)

[node name="legs_collision" type="CollisionShape2D" parent="Player"]
position = Vector2(1, 4.25)
shape = SubResource("RectangleShape2D_dwgg1")

[node name="BodyArea" type="Area2D" parent="Player"]

[node name="body_collision" type="CollisionShape2D" parent="Player/BodyArea"]
position = Vector2(1, -8.25)
shape = SubResource("RectangleShape2D_6sh32")

[node name="Label" type="Label" parent="Player"]
visible = false
offset_left = 9.0
offset_top = -33.0
offset_right = 22.0
offset_bottom = -19.0
scale = Vector2(0.6, 0.6)
text = "[E]"

[node name="Enemy" type="CharacterBody2D" parent="."]
modulate = Color(0.470191, 0.0159284, 0.132899, 1)
position = Vector2(518, 91)
scale = Vector2(3, 3)
script = ExtResource("4_6sh32")

[node name="Sprite2D" type="Sprite2D" parent="Enemy"]
texture = ExtResource("3_ru4tf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2(-0.5, 12)
shape = SubResource("RectangleShape2D_ejswk")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Enemy"]
avoidance_enabled = true
debug_enabled = true

[node name="Area2D" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Area2D"]
position = Vector2(-0.5, -3)
shape = SubResource("RectangleShape2D_bbk5w")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(351, -144)
scale = Vector2(3, 3)
navigation_polygon = SubResource("NavigationPolygon_bbk5w")

[node name="Box" type="StaticBody2D" parent="." groups=["Interactable", "Wall"]]
position = Vector2(247, 290)
scale = Vector2(3, 3)
script = ExtResource("5_bbk5w")

[node name="Sprite2D" type="Sprite2D" parent="Box"]
texture = ExtResource("1_wwpf4")
region_enabled = true
region_rect = Rect2(138, 239, 12, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box"]
position = Vector2(-0.166664, -1.33334)
shape = SubResource("RectangleShape2D_conm7")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_dwgg1")

[node name="Menu" type="Panel" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="UI/Menu/VBoxContainer"]
custom_minimum_size = Vector2(200, 10)
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_6sh32")
horizontal_alignment = 1
autowrap_mode = 2
justification_flags = 162

[node name="Panel" type="Panel" parent="UI/Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ejswk")

[node name="SettingsBtn" type="Button" parent="UI/Menu/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="BackToMenu" type="Button" parent="UI/Menu/VBoxContainer"]
layout_mode = 2
text = "Back to menu
"

[node name="Settings" parent="UI" instance=ExtResource("4_dwgg1")]

[connection signal="body_entered" from="Player/BodyArea" to="Player" method="_on_body_area_body_entered"]
[connection signal="body_exited" from="Player/BodyArea" to="Player" method="_on_body_area_body_exited"]
[connection signal="navigation_finished" from="Enemy/NavigationAgent2D" to="Enemy" method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="velocity_computed" from="Enemy/NavigationAgent2D" to="Enemy" method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="Enemy/Area2D" to="Enemy" method="_on_area_2d_body_entered"]
[connection signal="pressed" from="UI/Menu/VBoxContainer/SettingsBtn" to="UI" method="_on_settings_btn_pressed"]
[connection signal="pressed" from="UI/Menu/VBoxContainer/BackToMenu" to="UI" method="_on_back_to_menu_pressed"]
